@@ -41,48 +41,135 @@
 #include <grp.h>
 #include <ctype.h>
 
-#include "uid.h"
+#include "src/common/uid.h"
+#include "src/common/xmalloc.h"
 
 uid_t
 uid_from_string (char *name)
 {
-	struct passwd *pwd = NULL;
-	char *p = NULL;
+	struct passwd pwd, *result;
+	size_t bufsize;
+	char *buffer, *p = NULL;
+	int rc;
 	uid_t uid = (uid_t) strtoul (name, &p, 10);
 
-	if (*p != '\0')
-		pwd = getpwnam (name);
-	else
-		pwd = getpwuid (uid);
-
-	return pwd ? pwd->pw_uid : (uid_t) -1; 
+	bufsize = sysconf(_SC_GETPW_R_SIZE_MAX);
+	buffer = xmalloc(bufsize);
+	if (*p != '\0') {
+		while (1) {
+			rc = getpwnam_r(name, &pwd, buffer, bufsize, &result);
+			if (rc == EINTR)
+				continue;
+			if (rc != 0)
+				result = NULL;
+			break;
+		}
+		if (result == NULL)
+			uid = (uid_t) -1;
+		else
+			uid = result->pw_uid;
+	} else {
+		while (1) {
+			rc = getpwuid_r(uid, &pwd, buffer, bufsize, &result);
+			if (rc == EINTR)
+				continue;
+			if (rc != 0)
+				result = NULL;
+			break;
+		}
+		if (result == NULL)
+			uid = (uid_t) -1;
+		/* else uid is already correct */
+	}
+	xfree(buffer);
+	return uid; 
 }
 
 char *
 uid_to_string (uid_t uid)
 {
-	struct passwd *pwd = NULL;
+	struct passwd pwd, *result;
+	size_t bufsize;
+	char *buffer;
+	int rc;
 
 	/* Suse Linux does not handle multiple users with UID=0 well */
 	if (uid == 0)
 		return "root";
 
-	pwd = getpwuid(uid);
-	return pwd ? pwd->pw_name : "nobody";
+	bufsize = sysconf(_SC_GETPW_R_SIZE_MAX);
+	buffer = xmalloc(bufsize);
+	while (1) {
+		rc = getpwuid_r(uid, &pwd, buffer, bufsize, &result);
+		if (rc == EINTR)
+			continue;
+		if (rc != 0)
+			result = NULL;
+		break;
+	}
+	xfree(buffer);
+	return result ? result->pw_name : "nobody";
 }
 
 gid_t
 gid_from_string (char *name)
 {
-	struct group *g = NULL;
-	char *p = NULL;
+	struct group grp, *result;
+	size_t bufsize;
+	char *buffer, *p = NULL;
+	int rc;
 	gid_t gid = (gid_t) strtoul (name, &p, 10);
 
-	if (*p != '\0')
-		g = getgrnam (name);
-	else
-		g = getgrgid (gid);
-
-	return g ? g->gr_gid : (gid_t) -1;
+	bufsize = sysconf(_SC_GETGR_R_SIZE_MAX);
+	buffer = xmalloc(bufsize);
+	if (*p != '\0') {
+		while (1) {
+			rc = getgrnam_r(name, &grp, buffer, bufsize, &result);
+			if (rc == EINTR)
+				continue;
+			if (rc != 0)
+				result = NULL;
+			break;
+		}
+		if (result == NULL)
+			gid = (gid_t) -1;
+		else
+			gid = result->gr_gid;
+	} else {
+		while (1) {
+			rc = getgrgid_r(gid, &grp, buffer, bufsize, &result);
+			if (rc == EINTR)
+				continue;
+			if (rc != 0)
+				result = NULL;
+			break;
+		}
+		if (result == NULL)
+			gid = (gid_t) -1;
+		/* else gid is already correct */
+	}
+	xfree(buffer);
+	return gid; 
 }
 
+char *
+gid_to_string (gid_t gid)
+{
+	struct group grp, *result;
+	size_t bufsize;
+	char *buffer;
+	int rc;
+
+	bufsize = sysconf(_SC_GETGR_R_SIZE_MAX);
+	buffer = xmalloc(bufsize);
+	while (1) {
+		rc = getgrgid_r(gid, &grp, buffer, bufsize, &result);
+		if (rc == EINTR)
+			continue;
+		if (rc != 0)
+			result = NULL;
+		break;
+	}
+	xfree(buffer);
+	return result ? result->gr_name : "nobody";
+}
